--- a/src/assets/css/about-me.scss
+++ b/src/assets/css/about-me.scss
@@ -1,3 +1,63 @@
+@import "colors.scss";
 .about-me {
+  background: url("../images/bg-about-me.jpg") no-repeat;
+  background-size: cover;
+  border: solid $green-main;
+  border-width: 4px 0 4px 0;
 
+  &__grid-wrap {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1.5fr;
+    padding: 20px;
+  }
+  img {
+    width: 170px;
+    margin-bottom: 50px;
+  }
+  &__about {
+
+    &__title {
+      font-size: 50px;
+      font-family: 'Sigmar', sans-serif;
+    }
+
+    &__desc {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+  }
+
+  &__contacts {
+    font-family: 'Burbank', sans-serif;
+    columns: $green-darker;
+    &__lang {
+      border-bottom: 10px $green-main solid;
+      margin-bottom: 30px;
+      color: $green-darker;
+      .word {
+        font-size: 35px;
+      }
+      .desc {
+        font-size: 20px;
+        margin-left: 5px;
+      }
+      .value {
+        font-size: 40px;
+        line-height: 36px;
+        float: right;
+      }
+    }
+    &__info {
+      font-family: 'Sigmar', sans-serif;
+      font-size: 30px;
+      line-height: 31px;
+      &-title {
+        color: $green-lighter;
+      }
+      &-value {
+        color: $green-dark;
+        margin-bottom: 20px;
+      }
+    }
+  }
 }
