--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -45,6 +45,50 @@ header {
   width: 180px;
   height: 180px; }
 
+.about-me {
+  background: url("../images/bg-about-me.jpg") no-repeat;
+  background-size: cover;
+  border: solid #76a10f;
+  border-width: 4px 0 4px 0; }
+  .about-me__grid-wrap {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1.5fr;
+    padding: 20px; }
+  .about-me img {
+    width: 170px;
+    margin-bottom: 50px; }
+  .about-me__about__title {
+    font-size: 50px;
+    font-family: 'Sigmar', sans-serif; }
+  .about-me__about__desc {
+    font-size: 24px;
+    margin-bottom: 20px; }
+  .about-me__contacts {
+    font-family: 'Burbank', sans-serif;
+    columns: #4c6333; }
+    .about-me__contacts__lang {
+      border-bottom: 10px #76a10f solid;
+      margin-bottom: 30px;
+      color: #4c6333; }
+      .about-me__contacts__lang .word {
+        font-size: 35px; }
+      .about-me__contacts__lang .desc {
+        font-size: 20px;
+        margin-left: 5px; }
+      .about-me__contacts__lang .value {
+        font-size: 40px;
+        line-height: 36px;
+        float: right; }
+    .about-me__contacts__info {
+      font-family: 'Sigmar', sans-serif;
+      font-size: 30px;
+      line-height: 31px; }
+      .about-me__contacts__info-title {
+        color: #87b158; }
+      .about-me__contacts__info-value {
+        color: #2f3e1f;
+        margin-bottom: 20px; }
+
 body {
   background-color: #282c34;
   margin: 0;
@@ -52,7 +96,8 @@ body {
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+  color: #282c34; }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
@@ -68,7 +113,8 @@ ul {
     list-style: none; }
 
 .container {
-  max-width: 1400px; }
+  max-width: 1400px;
+  margin: 0 auto; }
 
 @media screen and (max-width: 1600px) {
   header ul li {
@@ -82,11 +128,46 @@ ul {
   header .name {
     width: 100%; }
   header .menu {
-    display: none; } }
+    display: none; }
+  .about-me {
+    background-repeat: round; }
+    .about-me__grid-wrap {
+      grid-template-columns: auto; }
+      .about-me__grid-wrap img {
+        width: 170px;
+        margin: 0 0 0 50px; }
+    .about-me__exp {
+      text-align: center; }
+    .about-me__contacts__info {
+      font-size: 25px; }
+      .about-me__contacts__info-title {
+        color: #4c6333; }
+    .about-me__contacts__lang .word {
+      font-size: 50px; }
+    .about-me__contacts__lang .desc {
+      font-size: 30px; }
+    .about-me__contacts__lang .value {
+      font-size: 60px;
+      line-height: 47px; } }
 
 @media screen and (max-width: 550px) {
-  header .name .name_and_prof .fullName {
-    font-size: 36px; }
+  header .name .name_and_prof {
+    margin: 0 0 0 10px; }
+    header .name .name_and_prof .fullName {
+      font-size: 36px; }
+  .about-me {
+    background-repeat: round; }
+    .about-me__grid-wrap {
+      grid-template-columns: auto; }
+    .about-me img {
+      width: 120px;
+      margin: 0 0 0 30px; }
+    .about-me__contacts__lang .word {
+      display: block; }
+    .about-me__contacts__lang .value {
+      float: none;
+      margin-left: 30px;
+      font-size: 40px; }
   .mobNewLine {
     display: block; } }
 
