--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -32,6 +32,10 @@
       font-size: 60px;
       line-height: 47px; } }
 
+@media screen and (max-width: 700px) {
+  .mobNewLine {
+    display: block; } }
+
 @media screen and (max-width: 550px) {
   header .name .name_and_prof {
     margin: 0 0 0 10px; }
@@ -43,17 +47,15 @@
       grid-template-columns: auto; }
     .about-me img {
       width: 120px;
-      margin: 0 0 0 30px; }
+      margin: 0 10px; }
     .about-me__contacts__lang .word {
       display: block; }
     .about-me__contacts__lang .value {
       float: none;
       margin-left: 30px;
-      font-size: 40px; }
-  .mobNewLine {
-    display: block; } }
+      font-size: 40px; } }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 480px) {
   header .name .name_and_prof .fullName {
     font-size: 29px;
     line-height: 40px; }
