experience section added

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -89,6 +89,20 @@ header {
         color: #2f3e1f;
         margin-bottom: 20px; }
 
+.experience {
+  background: url("../images/bg-01.jpg") no-repeat;
+  background-size: cover;
+  color: #EEF6F2;
+  padding: 50px 10px;
+  border-bottom: 3px solid #76a10f; }
+  .experience-title {
+    font-size: 50px;
+    font-family: 'Sigmar', sans-serif;
+    margin-bottom: 20px; }
+  .experience-desc {
+    font-size: 28px;
+    margin-bottom: 30px; }
+
 body {
   background-color: #282c34;
   margin: 0;
@@ -181,4 +195,8 @@ ul {
     font-size: 16px; }
   .avatar {
     width: 130px;
-    height: 130px; } }
+    height: 130px; }
+  .experience-title {
+    font-size: 40px; }
+  .experience-desc {
+    font-size: 22px; } }
