--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,6 +1,7 @@
 @import "colors.scss";
 @import "header.scss";
 @import "about-me.scss";
+@import "experience.scss";
 
 body {
   background-color: #282c34;
