programs list and work-plan sections are added

--- a/src/assets/css/experience.css
+++ b/src/assets/css/experience.css
@@ -2,7 +2,7 @@
   background: url("../images/bg-01.jpg") no-repeat;
   background-size: cover;
   color: #EEF6F2;
-  padding: 50px 10px;
+  padding: 50px 0;
   border-bottom: 3px solid #76a10f; }
   .experience-title {
     font-size: 50px;
