--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -2,5 +2,6 @@ $green-main: #76a10f;
 $green-darker: #4c6333;
 $green-dark: #2f3e1f;
 $green-lighter: #87b158;
+$green-pale: #c5e0bf;
 $blue-dark: #282c34;
 $white-main: #EEF6F2
