--- a/src/assets/css/experience.scss
+++ b/src/assets/css/experience.scss
@@ -3,7 +3,7 @@
   background: url("../images/bg-01.jpg") no-repeat;
   background-size: cover;
   color: $white-main;
-  padding: 50px 10px;
+  padding: 50px 0;
   border-bottom: 3px solid $green-main;
 
   &-title {
