--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -93,7 +93,7 @@ header {
   background: url("../images/bg-01.jpg") no-repeat;
   background-size: cover;
   color: #EEF6F2;
-  padding: 50px 10px;
+  padding: 50px 0;
   border-bottom: 3px solid #76a10f; }
   .experience-title {
     font-size: 50px;
@@ -101,6 +101,30 @@ header {
     margin-bottom: 20px; }
   .experience-desc {
     font-size: 28px;
+    margin-bottom: 30px; }
+
+.programs {
+  padding: 40px 10px;
+  background: #ffffff; }
+  .programs img {
+    margin: 15px;
+    text-align: center; }
+  .programs__flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center; }
+
+.work-plan {
+  background: #c5e0bf;
+  padding: 30px 0 70px;
+  border: solid #76a10f;
+  border-width: 5px 0; }
+  .work-plan__title {
+    font-family: 'Sigmar', sans-serif;
+    font-size: 50px; }
+  .work-plan p {
+    font-size: 25px;
     margin-bottom: 30px; }
 
 body {
@@ -128,7 +152,8 @@ ul {
 
 .container {
   max-width: 1400px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 0 10px; }
 
 @media screen and (max-width: 1600px) {
   header ul li {
@@ -137,6 +162,10 @@ ul {
     font-size: 40px; }
   header .name .name_and_prof .prof {
     font-size: 20px; } }
+
+@media screen and (max-width: 1300px) {
+  .programs__flex-container {
+    grid-template-columns: auto auto auto auto; } }
 
 @media screen and (max-width: 1100px) {
   header .name {
@@ -166,7 +195,11 @@ ul {
 
 @media screen and (max-width: 700px) {
   .mobNewLine {
-    display: block; } }
+    display: block; }
+  .work-plan__title {
+    font-size: 45px; }
+  .work-plan p {
+    font-size: 20px; } }
 
 @media screen and (max-width: 550px) {
   header .name .name_and_prof {
