--- a/src/assets/css/media.scss
+++ b/src/assets/css/media.scss
@@ -20,6 +20,14 @@
   }
 }
 
+@media screen and (max-width: 1300px) {
+  .programs {
+    &__flex-container {
+      grid-template-columns: auto auto auto auto;
+    }
+  }
+}
+
 @media screen and (max-width: 1100px) {
   // HEADER
   header {
@@ -72,6 +80,14 @@
 @media screen and (max-width: 700px) {
   .mobNewLine {
     display: block;
+  }
+  .work-plan {
+    &__title {
+      font-size: 45px;
+    }
+    p {
+      font-size: 20px;
+    }
   }
 }
 
