added wild-west section and routing

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -127,6 +127,108 @@ header {
     font-size: 25px;
     margin-bottom: 30px; }
 
+.works__title {
+  font-size: 100px;
+  text-align: center;
+  font-family: "Sigmar", sans-serif;
+  color: #EEF6F2;
+  background: url("../images/works/works_title_bg.jpg") no-repeat;
+  background-size: cover; }
+
+.works__fantasy {
+  background: url("../images/works/fantasy-bg.jpg") no-repeat;
+  background-size: cover;
+  border-top: 10px solid #76a10f; }
+  .works__fantasy__title {
+    padding: 50px 0;
+    text-align: center;
+    color: #282c34;
+    font-size: 50px;
+    font-family: 'Sigmar', sans-serif; }
+
+.wild-west {
+  background: #ffffff; }
+  .wild-west__title {
+    background: url("../images/works/wild-west-title-bg.png") no-repeat;
+    background-size: cover;
+    font-size: 80px;
+    text-align: center;
+    color: #282c34;
+    font-family: "Sigmar", sans-serif;
+    padding: 20px 0;
+    line-height: 80px; }
+  .wild-west__scenes-two {
+    background: #b8b8b8;
+    padding-top: 10px;
+    border-bottom: 10px solid #76a10f; }
+    .wild-west__scenes-two img {
+      width: 100%;
+      vertical-align: bottom; }
+  .wild-west__scenes-one {
+    background: #474747;
+    padding-bottom: 10px; }
+    .wild-west__scenes-one img {
+      width: 49%;
+      height: auto; }
+    .wild-west__scenes-one .flex-wrap {
+      align-items: flex-end;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between; }
+  .wild-west__desc {
+    color: #EEF6F2;
+    font-size: 30px;
+    font-family: 'Sigmar', sans-serif;
+    margin: 25px 0;
+    line-height: 35px; }
+  .wild-west__weapons .flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start; }
+  .wild-west__weapons__title {
+    font-size: 38px;
+    color: #EEF6F2;
+    font-family: 'Sigmar', sans-serif;
+    text-align: center;
+    background: #636363;
+    padding: 15px 0; }
+  .wild-west__weapons-wrap {
+    background: #474747;
+    border-bottom: 10px solid #76a10f; }
+  .wild-west__weapons img {
+    width: 65%; }
+    .wild-west__weapons img:first-child {
+      width: 35%; }
+  .wild-west__icons {
+    background: #b8b8b8;
+    padding-bottom: 20px;
+    border-bottom: 10px solid #76a10f; }
+    .wild-west__icons .flex-container {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      align-items: center; }
+    .wild-west__icons-item {
+      min-width: 200px;
+      width: 19%; }
+      .wild-west__icons-item:first-child {
+        width: 40%;
+        font-size: 50px;
+        font-family: 'Sigmar', sans-serif;
+        min-width: auto; }
+  .wild-west__characters {
+    background: #474747; }
+    .wild-west__characters img {
+      width: 100%; }
+    .wild-west__characters-title {
+      font-size: 50px;
+      line-height: 55px;
+      text-align: center;
+      font-family: 'Sigmar', sans-serif;
+      color: #EEF6F2;
+      padding: 20px 0; }
+
 body {
   background-color: #282c34;
   margin: 0;
@@ -191,7 +293,10 @@ ul {
       font-size: 30px; }
     .about-me__contacts__lang .value {
       font-size: 60px;
-      line-height: 47px; } }
+      line-height: 47px; }
+  .works__fantasy__title {
+    font-size: 40px;
+    padding: 30px 0; } }
 
 @media screen and (max-width: 700px) {
   .mobNewLine {
@@ -199,7 +304,28 @@ ul {
   .work-plan__title {
     font-size: 45px; }
   .work-plan p {
-    font-size: 20px; } }
+    font-size: 20px; }
+  .works__title {
+    font-size: 55px; }
+  .wild-west__title {
+    font-size: 55px;
+    line-height: 65px; }
+  .wild-west__desc {
+    font-size: 22px;
+    line-height: 30px; }
+  .wild-west__scenes-one img {
+    width: 100%;
+    margin-bottom: 15px; }
+  .wild-west__icons .flex-container {
+    justify-content: space-around; }
+  .wild-west__icons-item:first-child {
+    line-height: 40px;
+    padding: 20px 0;
+    width: auto;
+    text-align: center; }
+  .wild-west__characters-title {
+    font-size: 40px;
+    line-height: 42px; } }
 
 @media screen and (max-width: 550px) {
   header .name .name_and_prof {
@@ -218,7 +344,10 @@ ul {
     .about-me__contacts__lang .value {
       float: none;
       margin-left: 30px;
-      font-size: 40px; } }
+      font-size: 40px; }
+  .works__fantasy__title {
+    font-size: 27px;
+    padding: 20px 0; } }
 
 @media screen and (max-width: 480px) {
   header .name .name_and_prof .fullName {
@@ -232,4 +361,33 @@ ul {
   .experience-title {
     font-size: 40px; }
   .experience-desc {
-    font-size: 22px; } }
+    font-size: 22px; }
+  .works__title {
+    font-size: 40px;
+    line-height: 60px;
+    padding: 20px 0; }
+  .wild-west__title {
+    font-size: 40px;
+    line-height: 45px; }
+  .wild-west__desc {
+    font-size: 22px;
+    line-height: 30px; }
+  .wild-west__scenes-one img {
+    width: 100%;
+    margin-bottom: 15px; }
+  .wild-west__weapons__title {
+    font-size: 22px;
+    line-height: 30px; }
+  .wild-west__weapons img {
+    width: 100%; }
+    .wild-west__weapons img:first-child {
+      width: 100%; }
+  .wild-west__icons-item {
+    width: 40%;
+    min-width: auto; }
+    .wild-west__icons-item:first-child {
+      font-size: 30px;
+      line-height: 40px; }
+  .wild-west__characters-title {
+    font-size: 30px;
+    line-height: 32px; } }
