--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -4,6 +4,8 @@
 @import "experience.scss";
 @import "programs.scss";
 @import "work-plan.scss";
+@import "works.scss";
+@import "wild-west.scss";
 
 body {
   background-color: #282c34;
