--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -4,4 +4,7 @@ $green-dark: #2f3e1f;
 $green-lighter: #87b158;
 $green-pale: #c5e0bf;
 $blue-dark: #282c34;
-$white-main: #EEF6F2
+$white-main: #EEF6F2;
+$gray-medium: #474747;
+$gray-light: #b8b8b8;
+$gray-medium-light: #636363;
