portfolio fantasy works added

--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -4,7 +4,9 @@ $green-dark: #2f3e1f;
 $green-lighter: #87b158;
 $green-pale: #c5e0bf;
 $blue-dark: #282c34;
+$blue-darkest: #191b1e;
 $white-main: #EEF6F2;
 $gray-medium: #474747;
 $gray-light: #b8b8b8;
 $gray-medium-light: #636363;
+$gray-dark: #2c2c2c;
