--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -136,9 +136,54 @@ header {
   background-size: cover; }
 
 .works__fantasy {
-  background: url("../images/works/fantasy-bg.jpg") no-repeat;
-  background-size: cover;
-  border-top: 10px solid #76a10f; }
+  background: #2c2c2c; }
+  .works__fantasy-characters {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px; }
+    .works__fantasy-characters img {
+      width: 21%; }
+      .works__fantasy-characters img:first-child {
+        width: 33%; }
+      .works__fantasy-characters img:nth-child(3) {
+        width: 25%; }
+  .works__fantasy-characters2, .works__fantasy-characters3 {
+    align-items: center;
+    background: #2c2c2c;
+    padding: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    border-top: 15px solid #191b1e; }
+    .works__fantasy-characters2 img, .works__fantasy-characters3 img {
+      width: 25%; }
+  .works__fantasy-characters3 img {
+    width: 50%; }
+  .works__fantasy-many {
+    padding: 30px 0 60px;
+    background: url("../images/works/fantasy/fantasy-bg2.jpg") no-repeat;
+    background-size: cover; }
+    .works__fantasy-many img {
+      width: 100%; }
+  .works__fantasy-desc {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3); }
+    .works__fantasy-desc img {
+      width: 60%; }
+    .works__fantasy-desc .desc {
+      width: 40%;
+      font-size: 25px;
+      font-family: 'Sigmar', sans-serif; }
+  .works__fantasy__title-wrap {
+    background: url("../images/works/fantasy/fantasy-bg.jpg") no-repeat;
+    background-size: cover;
+    border-top: 10px solid #76a10f;
+    padding-bottom: 20px; }
   .works__fantasy__title {
     padding: 50px 0;
     text-align: center;
@@ -229,34 +274,6 @@ header {
       color: #EEF6F2;
       padding: 20px 0; }
 
-body {
-  background-color: #282c34;
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #282c34; }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
-
-.header_green {
-  color: #76a10f; }
-
-ul {
-  margin: 0;
-  padding: 0; }
-  ul li {
-    display: inline-block;
-    list-style: none; }
-
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 10px; }
-
 @media screen and (max-width: 1600px) {
   header ul li {
     font-size: 20px; }
@@ -307,6 +324,31 @@ ul {
     font-size: 20px; }
   .works__title {
     font-size: 55px; }
+  .works .works__fantasy-desc {
+    background: rgba(0, 0, 0, 0.5);
+    color: #EEF6F2;
+    font-size: 20px;
+    flex-flow: column-reverse wrap; }
+    .works .works__fantasy-desc img {
+      width: 100%; }
+    .works .works__fantasy-desc .desc {
+      width: 100%;
+      font-size: 25px;
+      padding: 20px;
+      box-sizing: border-box; }
+  .works .works__fantasy__title {
+    font-size: 40px;
+    padding: 30px 0; }
+  .works .works__fantasy-characters img {
+    width: 50%; }
+    .works .works__fantasy-characters img:first-child {
+      width: 50%; }
+    .works .works__fantasy-characters img:nth-child(3) {
+      width: 50%; }
+  .works .works__fantasy-characters2 img {
+    width: 50%; }
+  .works .works__fantasy-characters3 img {
+    width: 100%; }
   .wild-west__title {
     font-size: 55px;
     line-height: 65px; }
@@ -391,3 +433,31 @@ ul {
   .wild-west__characters-title {
     font-size: 30px;
     line-height: 32px; } }
+
+body {
+  background-color: #282c34;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #282c34; }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
+
+.header_green {
+  color: #76a10f; }
+
+ul {
+  margin: 0;
+  padding: 0; }
+  ul li {
+    display: inline-block;
+    list-style: none; }
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 10px; }
