added health defender section and starting with tanks section..

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -6,6 +6,8 @@
 @import "work-plan.scss";
 @import "works.scss";
 @import "wild-west.scss";
+@import "health-defender.scss";
+@import "tanks.scss";
 @import "media.scss";
 
 body {
