--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -274,6 +274,52 @@ header {
       color: #EEF6F2;
       padding: 20px 0; }
 
+.health-defender {
+  border: solid #76a10f;
+  border-width: 10px 0;
+  background: url("../images/works/healthDefender/big-bg.jpg") no-repeat;
+  background-size: cover; }
+  .health-defender__title {
+    font-family: 'Sigmar', sans-serif;
+    font-size: 50px;
+    color: #282c34;
+    text-align: center;
+    margin-top: 30px; }
+    .health-defender__title-small {
+      margin-bottom: 30px;
+      font-family: 'Sigmar', sans-serif;
+      font-size: 30px;
+      text-align: center; }
+  .health-defender .flex-container {
+    padding: 40px;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    margin-bottom: 40px; }
+    .health-defender .flex-container img {
+      box-shadow: 0 0 10px #191b1e;
+      margin: 10px auto;
+      max-width: 100%; }
+      .health-defender .flex-container img:nth-child(2) {
+        max-width: 90%; }
+      .health-defender .flex-container img:nth-child(3) {
+        max-width: 60%; }
+      .health-defender .flex-container img:nth-child(4) {
+        max-width: 35%; }
+
+.tanks__title-section {
+  background: url("../images/works/tanks/tansk-title-bg.jpg") no-repeat;
+  background-size: cover;
+  color: #EEF6F2; }
+  .tanks__title-section__title {
+    font-size: 50px;
+    text-align: center;
+    font-family: 'Sigmar', sans-serif; }
+    .tanks__title-section__title__desc {
+      font-family: 'Sigmar', sans-serif;
+      text-align: left; }
+
 @media screen and (max-width: 1600px) {
   header ul li {
     font-size: 20px; }
@@ -367,7 +413,12 @@ header {
     text-align: center; }
   .wild-west__characters-title {
     font-size: 40px;
-    line-height: 42px; } }
+    line-height: 42px; }
+  .health-defender__title {
+    font-size: 30px;
+    margin-top: 30px; }
+    .health-defender__title-small {
+      font-size: 22px; } }
 
 @media screen and (max-width: 550px) {
   header .name .name_and_prof {
@@ -389,7 +440,14 @@ header {
       font-size: 40px; }
   .works__fantasy__title {
     font-size: 27px;
-    padding: 20px 0; } }
+    padding: 20px 0; }
+  .health-defender__title {
+    font-size: 22px;
+    margin-top: 30px; }
+    .health-defender__title-small {
+      font-size: 14px; }
+  .health-defender .flex-container {
+    padding: 20px; } }
 
 @media screen and (max-width: 480px) {
   header .name .name_and_prof .fullName {
